[gd_scene load_steps=9 format=3 uid="uid_ark_int"]

[ext_resource type="Script" path="res://scripts/world/ark_system.gd" id="1_ark_sys"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="2_hud"]
[ext_resource type="Script" path="res://scripts/world/game_camera.gd" id="3_camera"]
[ext_resource type="Script" path="res://scripts/ui/animal_selector.gd" id="4_selector"]
[ext_resource type="Script" path="res://scripts/ui/drag_receiver.gd" id="5_drag"]
[ext_resource type="Script" path="res://scripts/world/water_visual.gd" id="6_water"]
[ext_resource type="Script" path="res://scripts/ui/dev_test_panel.gd" id="7_dev"]
[ext_resource type="Script" path="res://scripts/ui/animal_detail_panel.gd" id="9_detail"]

[node name="ArkInterior" type="Node2D"]

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(640, 360)
current = true
script = ExtResource("3_camera")

[node name="WaterVisual" type="Node2D" parent="."]
script = ExtResource("6_water")

[node name="ArkSystem" type="Node2D" parent="." groups=["ark_system"]]
script = ExtResource("1_ark_sys")

[node name="Entities" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DragReceiver" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5_drag")

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_hud")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 200.0

[node name="DayLabel" type="Label" parent="CanvasLayer/HUD/VBoxContainer"]
layout_mode = 2

[node name="ResourceLabel" type="Label" parent="CanvasLayer/HUD/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 18
text = "üåä Ê¥™Ê∞¥Â∑≤Ëá≥ÔºåÁôªËàπÔºÅ"

[node name="AnimalSelector" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -160.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_selector")

[node name="Panel" type="Panel" parent="CanvasLayer/AnimalSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/AnimalSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/AnimalSelector/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="DevTestPanel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("7_dev")

[node name="DetailPanel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 150.0
script = ExtResource("9_detail")
