extends Control

@onready var day_label = $VBoxContainer/DayLabel
@onready var res_label = $VBoxContainer/ResourceLabel
@onready var start_button = $StartButton

func _ready():
	if start_button:
		start_button.pressed.connect(_on_start_pressed)

func _process(_delta):
	var gm = get_node_or_null("/root/GameManager")
	if not gm: return
	
	var phase_idx = gm.get("current_phase")
	var phase_name = "å¸ƒå±€é˜¶æ®µ"
	if phase_idx == 1: phase_name = "å¤§æ´ªæ°´é˜¶æ®µ"
	elif phase_idx == 2: phase_name = "æ¼‚æµé˜¶æ®µ"
	
	day_label.text = "å¤©æ•°: %d | %s" % [gm.get("day"), phase_name]
	
	var veg = gm.get("veg_rations")
	var meat = gm.get("meat_rations")
	var faith = gm.get("faith")
	res_label.text = "ğŸç´ é£Ÿ: %d | ğŸ¥©è‚‰ç±»: %d | â¤ï¸ä¿¡å¿ƒ: %d%%" % [veg, meat, faith]
	
	# å¸ƒå±€å®Œæˆåéšè—å¯åŠ¨æŒ‰é’®
	if phase_idx != 0:
		start_button.visible = false

func _on_start_pressed():
	var gm = get_node_or_null("/root/GameManager")
	if gm:
		gm.call("start_deluge_phase")
		# éšè—åº•éƒ¨èœå•
		var selector = get_tree().root.find_child("AnimalSelector", true, false)
		if selector: selector.visible = false
		
		if get_node_or_null("/root/HapticManager"):
			get_node("/root/HapticManager").call("heavy")
